# aoc2025

./: Cargo.toml  d12_manual.txt
input/: d12.txt  d12_s1.txt
src/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  utils.rs
