[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tinybitset = "0.0.2"
clap = { version = "4.5.53", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
inventory = "0.3.21"
itertools = "0.14.0"
num = "0.4.3"
regex = "1.12.2"
sscanf = "0.4.4"
